fail/tests/test_all.R
library(testthat)
test_check("fail")
